[package]
name = "task-planner"
version = "0.1.0"
authors = ["Harrison McCullough <mccullough.harrison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.9"
